--- a/project/package.json
+++ b/project/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "lint-staged": "lint-staged"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -47,15 +46,15 @@
     "lint-staged": "^14.0.1",
     "typescript": "~5.1.3"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "ng lint --fix",
+      "git add"
+    ]
   }
 }
