--- a/project/package.json
+++ b/project/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^14.0.0",
     "@types/jest": "^29.5.8",
     "firebase": "^9.16.0",
+    "html2canvas": "^1.4.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
+    "jspdf": "^2.5.1",
     "router": "^1.3.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -36,9 +38,11 @@
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
     "typescript": "~4.7.2"
   },
-  "jest":{
+  "jest": {
     "preset": "jest-preset-angular",
     "setupFilesAfterEnv": [
       "<rootDir>/src/setup.jest.ts"
